package BusinessLayer;public enum Area {
}
