package BusinessLayer;

public enum Products {
    Water_7290019056966,
    Milk_7290111607400,
    Eggs_4902505139314;
}
